--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: vootau/infra:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/infra:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -75,7 +75,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             # ¬ыполн€ет pull образа с DockerHub
-            sudo docker pull vootau/infra
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra
             #остановка всех контейнеров
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 vootau/infra
+            sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/infra
